--- a/package.json
+++ b/package.json
@@ -1,45 +1,42 @@
 {
-  "name": "TS-GraphQL-Boilerplate",
+  "name": "typegraphql-jwt-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "apollo-server-express": "^2.17.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
+    "express": "^4.17.1",
+    "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.11",
+    "pg": "^8.3.3",
+    "reflect-metadata": "^0.1.10",
+    "type-graphql": "^1.0.0",
+    "typeorm": "0.2.25",
+    "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.8",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^8.0.29",
+    "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^8.3.0",
+    "nodemon": "^2.0.4",
+    "ts-node": "3.3.0",
+    "typescript": "^4.0.2"
+  },
   "scripts": {
     "watch": "tsc -w",
-    "dev": "env-cmd -e development nodemon dist/index.js"
+    "dev": "env-cmd -e development nodemon dist/index.js",
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/connect-redis": "0.0.14",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.7",
-    "@types/express-session": "^1.17.0",
-    "@types/ioredis": "^4.17.3",
-    "@types/node": "^14.6.1",
-    "@types/nodemailer": "^6.4.0",
-    "@types/redis": "^2.8.26",
-    "@types/uuid": "^8.3.0",
-    "nodemon": "^2.0.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
-  },
-  "dependencies": {
-    "apollo-server-express": "^2.17.0",
-    "argon2": "^0.27.0",
-    "connect-redis": "^5.0.0",
-    "cors": "^2.8.5",
-    "dataloader": "^2.0.0",
-    "env-cmd": "^10.1.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "graphql": "^15.3.0",
-    "ioredis": "^4.17.3",
-    "nodemailer": "^6.4.11",
-    "pg": "^8.3.3",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.0.0",
-    "typeorm": "^0.2.25",
-    "uuid": "^8.3.0"
-  }
+  "license": "ISC"
 }
