--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-server-express": "^2.17.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
