--- a/package.json
+++ b/package.json
@@ -24,17 +24,22 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^26.0.14",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^8.0.29",
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
+    "ts-jest": "^26.3.0",
     "ts-node": "3.3.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "watch": "tsc -w",
-    "dev": "env-cmd -e development nodemon dist/index.js",
+    "db:setup": "ts-node ./src/test-utils/setup.ts",
+    "test": "env-cmd -f ./config/test.env jest && npm run db:setup",
+    "dev": "env-cmd -f ./config/dev.env nodemon dist/index.js",
     "start": "ts-node src/index.ts"
   },
   "keywords": [],
