--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^1.0.0",
-    "typeorm": "0.2.25",
+    "typeorm": "^0.2.25",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
@@ -33,7 +33,7 @@
     "nodemon": "^2.0.4",
     "ts-jest": "^26.3.0",
     "ts-node": "3.3.0",
-    "typescript": "^4.0.3"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "watch": "tsc -w",
