--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
+    "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
